# hedgedoc-history-reference

./: README.md  hd.structure.yaml  pyproject.toml
examples/: hd.complex.yaml  hd.mixed.yaml
hedgedoc_history/: cli.py  main.py
